--- a/W14/index.html
+++ b/W14/index.html
@@ -59,7 +59,7 @@
       <h2 class="hero__title">Scoots</h2>
       <span class="hero__subtitle">Scooters, Jeeps, and ATVs</span>
       <p class="hero__description">We are a motor scooter rental company in Cozumel Mexico. Vehicles include Scooters, Jeeps, and side-by-side ATVs. With 2 locations on the island, we've got you covered as you spend your vacation with us!</p>
-      <a href="#" class="hero__button">Make a Reservation</a>
+      <a href="reservations.html" class="hero__button">Make a Reservation</a>
     </section>
 
 
@@ -75,7 +75,7 @@
               <p class="section__summary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus temporibus natus commodi corporis suscipit, itaque odio quidem ipsa adipisci quas nemo tempora repellendus corrupti facilis. Molestiae blanditiis voluptas incidunt sed.</p>
             </article>
             <picture class="section__picture">
-              <img src="images/scooters_500.jpg" alt="People on scooters">
+              <img src="images/placeholder.jpg" data-src="images/scooters_500.jpg" alt="People on scooters">
             </picture>
           </div>
         </div>
@@ -90,7 +90,7 @@
               <p class="section__summary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus temporibus natus commodi corporis suscipit, itaque odio quidem ipsa adipisci quas nemo tempora repellendus corrupti facilis. Molestiae blanditiis voluptas incidunt sed.</p>
             </article>
             <picture class="section__picture">
-              <img src="images/atv_500.jpg" alt="People on scooters">
+              <img src="images/placeholder.jpg" data-src="images/atv_500.jpg" alt="People on scooters">
             </picture>
           </div>
         </div>
@@ -105,7 +105,7 @@
               <p class="section__summary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus temporibus natus commodi corporis suscipit, itaque odio quidem ipsa adipisci quas nemo tempora repellendus corrupti facilis. Molestiae blanditiis voluptas incidunt sed.</p>
             </article>
             <picture class="section__picture">
-              <img src="images/jeep_500.jpg" alt="People on scooters">
+              <img src="images/placeholder.jpg" data-src="images/jeep_500.jpg" alt="People on scooters">
             </picture>
           </div>
         </div>
@@ -155,19 +155,19 @@
         <h3>Links</h3>
         <ul class="footer__list">
           <li class="footer__item">
-            <a class="footer__link" href="#">Rentals</a>
+            <a class="footer__link" href="rentals.html">Rentals</a>
           </li>
           <li class="footer__item">
-            <a class="footer__link" href="#">Reservations</a>
+            <a class="footer__link" href="reservations.html">Reservations</a>
           </li>
           <li class="footer__item">
-            <a class="footer__link" href="#">Tours</a>
+            <a class="footer__link" href="tours.html">Tours</a>
           </li>
           <li class="footer__item">
-            <a class="footer__link" href="#">Contact</a>
+            <a class="footer__link" href="contact.html">Contact</a>
           </li>
           <li class="footer__item">
-            <a href="#" class="footer__link">Resources</a>
+            <a class="footer__link" href="resources.html">Resources</a>
           </li>
         </ul>
       </div>
@@ -210,6 +210,7 @@
       });
 
     </script>
+    <script src="js/lazyload.js"></script>
     <script src="js/scripts.js" defer></script>
 
   </body>
