--- a/W14/resources.html
+++ b/W14/resources.html
@@ -12,8 +12,6 @@
     <link rel="stylesheet" href="css/styles.css">
     <script>
       document.addEventListener('DOMContentLoaded', () => {
-        fetchCurrentWeather();
-        fetchCurrentForecast();
         updateFooter();
       });
 
@@ -39,13 +37,13 @@
             <a class="nav__link" href="index.html">Home</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link nav__link--active" href="rentals.html">Rentals</a>
+            <a class="nav__link" href="rentals.html">Rentals</a>
           </li>
           <li class="nav__item">
             <a class="nav__link" href="tours.html">Tours</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="reservations.html">Reservations</a>
+            <a class="nav__link nav__link--active" href="reservations.html">Reservations</a>
           </li>
           <li class="nav__item">
             <a class="nav__link" href="contact.html">Contact</a>
@@ -56,12 +54,32 @@
 
     <!-- HERO -->
     <section class="hero hero--subpage">
-      <h2 class="hero__title">Rentals</h2>
+      <h2 class="hero__title">Resources</h2>
     </section>
 
 
     <!-- MAIN CONTENT -->
     <main class="main">
+
+      <section class="resources">
+        <ul>
+          <li>
+            <span>Jeep Photo by <a href="https://unsplash.com/@neonbrand" class="resources__link">NeONBRAND</a> on <a href="https://unsplash.com/photos/yDekvyZ52dU" class="resources__link">Unsplash</a></span>
+          </li>
+          <li>
+            <span>Scooters Photo by <a href="https://unsplash.com/@chuttersnap" class="resources__link">CHUTTERSNAP</a> on <a href="https://unsplash.com/photos/AcdxiyTSR0A" class="resources__link">Unsplash</a></span>
+          </li>
+          <li>
+            <span>ATV Photo by <a href="https://unsplash.com/@lightrisephoto" class="resources__link">Devon Divine</a> on <a href="https://unsplash.com/photos/cprzBezGXFY" class="resources__link">Unsplash</a></span>
+          </li>
+          <li>
+            <span>Scooters on Beach Photo by <a href="https://unsplash.com/@seemoris" class="resources__link">Devon Divine</a> on <a href="https://unsplash.com/photos/nhXV1T9LVMg" class="resources__link">Unsplash</a></span>
+          </li>
+          <li>
+            <span>Docked Cruise Ships Photo by <a href="https://unsplash.com/@damononroad" class="resources__link">Devon Divine</a> on <a href="https://unsplash.com/photos/AVZNtIKAtWA" class="resources__link">Unsplash</a></span>
+          </li>
+        </ul>
+      </section>
 
 
 
@@ -73,19 +91,19 @@
         <h3>Links</h3>
         <ul class="footer__list">
           <li class="footer__item">
-            <a class="footer__link" href="#">Rentals</a>
+            <a class="footer__link" href="rentals.html">Rentals</a>
           </li>
           <li class="footer__item">
-            <a class="footer__link" href="#">Reservations</a>
+            <a class="footer__link" href="reservations.html">Reservations</a>
           </li>
           <li class="footer__item">
-            <a class="footer__link" href="#">Tours</a>
+            <a class="footer__link" href="tours.html">Tours</a>
           </li>
           <li class="footer__item">
-            <a class="footer__link" href="#">Contact</a>
+            <a class="footer__link" href="contact.html">Contact</a>
           </li>
           <li class="footer__item">
-            <a href="#" class="footer__link">Resources</a>
+            <a class="footer__link" href="resources.html">Resources</a>
           </li>
         </ul>
       </div>
