--- a/W14/confirmation.html
+++ b/W14/confirmation.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Motor scooter rental company in Cozumel, Mexico.">
-    <title>Scoots | Contact</title>
+    <title>Scoots | Confirmation</title>
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
@@ -43,10 +43,10 @@
             <a class="nav__link" href="tours.html">Tours</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="reservations.html">Reservations</a>
+            <a class="nav__link nav__link--active" href="reservations.html">Reservations</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link nav__link--active" href="contact.html">Contact</a>
+            <a class="nav__link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -54,51 +54,15 @@
 
     <!-- HERO -->
     <section class="hero hero--subpage">
-      <h2 class="hero__title">Contact</h2>
+      <h2 class="hero__title">Thank you!</h2>
+      <span class="hero__subtitle">Your reservation request has been received!</span>
+      <a href="reservations.html" class="hero__button">Make another Reservation</a>
     </section>
 
 
     <!-- MAIN CONTENT -->
     <main class="main">
 
-      <section class="maps">
-
-        <h3 class="maps__heading">Send us a message!</h3>
-
-        <form action="confirmation.html" class="maps__form">
-          <label class="form__label">Full Name
-            <input type="text" name="fullname" pattern="[A-Za-z\s]*" placeholder="Full Name" required>
-          </label>
-          <label class="form__label">Email
-            <input type="email" name="email" placeholder="Email" required>
-          </label>
-          <label class="form__label">Message
-            <textarea class="form__textarea" name="comments"></textarea>
-          </label>
-          <fieldset class="form__fieldset">
-            <input class="form__button" type="submit" value="Send Message">
-          </fieldset>
-        </form>
-
-      </section>
-
-      <section class="maps">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3585.430981693592!2d-86.9736591452813!3d20.477961154551068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjDCsDI4JzI4LjUiTiA4NsKwNTgnMzAuNyJX!5e0!3m2!1sen!2sus!4v1608260858310!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        <div class="maps__address">
-          <h3>Centro de Cozumel Location</h3>
-          <p>123 Avenue</p>
-          <p>San Miguel de Cozumel</p>
-        </div>
-      </section>
-
-      <section class="maps">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29894.803946689262!2d-86.9538724577976!3d20.512354221936313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e58330a673659%3A0x9cedf516c7d86e9a!2sSan%20Miguel%20de%20Cozumel%2C%20Quintana%20Roo%2C%20Mexico!5e0!3m2!1sen!2sus!4v1608260961063!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        <div class="maps__address">
-          <h3>Puerta Maya Terminal Location</h3>
-          <p>123 Avenue</p>
-          <p>San Miguel de Cozumel</p>
-        </div>
-      </section>
 
     </main>
 
