--- a/W14/resources.html
+++ b/W14/resources.html
@@ -78,6 +78,18 @@
           <li>
             <span>Docked Cruise Ships Photo by <a href="https://unsplash.com/@damononroad" class="resources__link">Devon Divine</a> on <a href="https://unsplash.com/photos/AVZNtIKAtWA" class="resources__link">Unsplash</a></span>
           </li>
+          <li>
+            <span>Whale Photo by <a href="https://unsplash.com/@vnbuchholz92" class="resources__link">Evan Buchholz</a> on <a href="https://unsplash.com/photos/1jyy7ouBb8M" class="resources__link">Unsplash</a></span>
+          </li>
+          <li>
+            <span>Chichen Itza Ruins Photo by <a href="https://unsplash.com/@kwakus" class="resources__link">E Mens</a> on <a href="https://unsplash.com/photos/hpC8h942zhk" class="resources__link">Unsplash</a></span>
+          </li>
+          <li>
+            Tour information provided by <a href="https://www.cozumel-tours.com/adventure-tours.htm" class="resources__link">Cozumel Tours</a>
+          </li>
+          <li>
+            Information about Cozumel provided by <a href="https://en.wikipedia.org/wiki/Cozumel" class="resources__link">Wikipedia</a>
+          </li>
         </ul>
       </section>
 
