--- a/W14/tours.html
+++ b/W14/tours.html
@@ -61,23 +61,53 @@
     <!-- MAIN CONTENT -->
     <main class="main">
 
-      <h2>Tours</h2>
-      <div class="section">
-        <h3><a href="https://www.cozumelparks.com/en/cozumel-museum/">Museo de la Isla de Cozumel</a></h3>
-        <p><img src="images/placeholder.jpg" data-src="images/mayanartifact.jpg" class="tourImage" alt="Mayan Artifact">Originally one of the first hotels on the island, the Island of Cozumel Museum dates back to the 1930's. Come learn about Cozumel's history, geography, ecosystems, customs and culture with 11 exciting exhibits. This is a must see for a first time visitor to become familiar with the islands history, people and culture. You can tour the museum in about 2 hours and still have plenty of time to explore the island. For more information click the link above.</p>
-      </div>
-      <div class="section">
-        <h3><a href="https://www.cozumelparks.com/en/san_gervasio/">San Gervasio</a></h3>
-        <p><img src="images/placeholder.jpg" data-src="images/sangervasio.jpg" class="tourImage" alt="San Gervasio Mayan Ruins">San Gervasio is a Mayan archaeological site on the northern part of the island of Cozumel. The largest collection of ruins dating back to 100 BC are found here. These ruins were once a place of pilgrimage for Mayan women to worship the goddess Ix Chel; a goddess of fertility, childbirth and medicine. Entrance to the park is $10.75 per person. You can hire guided tours for an additional price. For more information click the link above.</p>
-      </div>
-      <div class="section">
-        <h3 class="tourH3">Lighthouses</h3>
-        <p><img src="images/placeholder.jpg" data-src="images/lighthouse.jpg" class="tourImage" alt="Lighthouse in Quintana Roo, Cozumel, Mexico">Cozumel has several lighthouses along the coasts. Among them are Punta Ealetita Lighthouse and Punta Langosta, both located in San Miguel de Cozumel. On the southern coast of Cozumel is Celarain Lighthouse. On the northernmost tip of the island is Maybe Lighthosue only accessible through jungle terrain on ATVs. Most of the lighthouses are open to the public for climbs daily and offer scenic views across the caribbean.</p>
-      </div>
-      <div class="section">
-        <h3 class="tourH3">Beaches</h3>
-        <p><img src="images/placeholder.jpg" data-src="images/beach.jpg" class="tourImage" alt="Beach in Cozumel, Mexico">Cozumel boasts more than a dozen public beaches. Whether you want to surf, snorkel, swim or sunbathe; your options are not limited. There are several beaches within walking distance from the cruise port. Along the south-western coastline is Palancar Beach offering free ammenities to the public. Punta Sur Beach is the southern tip of Cozumel and boasts the largest ecological park with many reefs and lagoons; perfect for the avid snorkler. Along the eastern coast surf enthusiasts can rent equiptment at several beaches including Chen Rio Beach and Ixpalbarco Beach. There are several private beaches offering a little more privacy with admission along the eastern coast. For those seeking more adventure and activity there are many clubs also along the eastern coast offering water activities for a daily admission.</p>
-      </div>
+      <section class="tours">
+        <div class="tours__wrapper">
+          <div>
+            <h3 class="tours__heading">History of Cozumel</h3>
+            <p class="tours__paragraph">
+              Cozumel (Spanish pronunciation: [kosuˈmel], Yucatec Maya: Kùutsmil) is an island and municipality in the Caribbean Sea off the eastern coast of Mexico's Yucatán Peninsula, opposite Playa del Carmen. It is separated from the mainland by Cozumel Channel and is close to the Yucatán Channel. The municipality is part of the state of Quintana Roo, Mexico.
+            </p>
+            <p class="tours__paragraph">
+              The economy of Cozumel is based on tourism, with visitors able to benefit from the island's balnearios, scuba diving, and snorkeling. The main town on the island is San Miguel de Cozumel.
+            </p>
+          </div>
+          <picture>
+            <img src="images/placeholder.jpg" data-src="images/cozumel.jpg" alt="Island of Cozumel" class="tours__picture">
+          </picture>
+        </div>
+      </section>
+
+      <section class="tours">
+        <div class="tours__wrapper">
+          <div>
+            <h3 class="tours__heading">Whale Shark Adventure</h3>
+            <p class="tours__paragraph">
+              New to Cozumel, this tour lets you swim and snorkel with the world's largest fish in the open ocean in only 9 hours! Board a fast boat and head for Isla Contoy, where hundreds of these massive creatures, up to 60 feet (12m) in length, gather every summer to breed and feed on the summer plankton bloom. This is one of nature's most incredible experiences - you will likely get to snorkel right there with them! Nowhere else in the Caribbean can you have an experience like this - only in the Yucatan Peninsula of Mexico.
+            </p>
+            <p class="tours__paragraph">
+              The whale sharks can be seen from up close, but not touched. All trips are reconfirmed a day in advance to assure good weather for viewing the whale sharks. Please travel as light as possible as there is limited room in the boat. Sightings and swimming are not guaranteed, as nature is nature, but most times you are able to swim with the sharks, particularly mid-season.
+            </p>
+          </div>
+          <picture>
+            <img src="images/placeholder.jpg" data-src="images/whale.jpg" alt="Whales" class="tours__picture">
+          </picture>
+        </div>
+      </section>
+
+      <section class="tours">
+        <div class="tours__wrapper">
+          <div>
+            <h3 class="tours__heading">Chichen Itza Ruins Tour</h3>
+            <p class="tours__paragraph">
+              Chichen Itza is the most famous Mayan Ruins site in all of Mexico. It has been designated as a UNESCO world heritage site, and the main pyramid, El Castillo, was declared as one of the 7 wonders of the world in 2006 after a worldwide vote. El Castillo is, indeed, perhaps the most recognizable structure in the entire Mayan Empire, but you'll be surprised at how many other magnificent structures still exist at Chichen Itza today. Chichen Itza is, understandably, the most visited Mayan Ruins site in the Yucatan peninsula of Mexico, and we offer you three exciting ways to enjoy it's majesty with our Clasico and Private Express tours. It is a long haul from Cozumel, about a 14 hour day, but there is only one Chichen Itza.
+            </p>
+          </div>
+          <picture>
+            <img src="images/placeholder.jpg" data-src="images/chichen.jpg" alt="Whales" class="tours__picture">
+          </picture>
+        </div>
+      </section>
 
     </main>
 
